<resources>
    <string name="app_name">School</string>
    <string name="action_settings">Settings</string>
    <string name="news">الاخبار</string>
    <string name="lohet_sharf">لوحة الشرف</string>
    <string name="montada">المنتدى</string>
    <string name="faaliat">الفعاليات </string>
    <string name="medya">الميديا</string>
    <string name="morasla">المراسلة</string>
    <string name="aboutus">من نحن</string>
    <string name="date"> تغيير التاريخ</string>
    <string name="username">اسم المستخدم</string>
    <string name="password">كلمة المرور</string>
    <string name="confirmpassword">تاكيد كلمة المرور</string>
    <string name="email">ألاميل</string>
    <string name="phone">التلفون</string>
    <string name="login"> تسجيل الدخول</string>
    <string name="registeruser">مستخدم جديد</string>


    <string name="title_activity_register">Register</string>
    <string name="register">تسجيل</string>
    <string name="registerfacebook">التسجيل بواسطة الفيس بوك</string>


</resources>
