<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.anas.school.Register">


    <EditText
        android:id="@+id/et_username_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:background="@drawable/layout_border"
        android:padding="8dp"
        android:inputType=""
        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/et_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_border"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:lines="1"
        android:hint="@string/email"
        android:textSize="14sp"
        />
    <EditText
        android:id="@+id/et_password_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_border"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:lines="1"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp"
        />

    <EditText
        android:id="@+id/et_confirmpassword_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_border"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:lines="1"
        android:inputType="textPassword"
        android:hint="@string/confirmpassword"
        android:textSize="14sp"
        />

    <EditText
        android:id="@+id/et_phone_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/layout_border"
        android:padding="8dp"
        android:lines="1"
        android:inputType="phone"
        android:hint="@string/phone"
        android:textSize="14sp"
        />

    <Button
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:id="@+id/bt_register_id"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:text="@string/register"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_register_facebook_id"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/registerfacebook"/>

</LinearLayout>
