<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.anas.school.MainActivity"
    tools:showIn="@layout/activity_main"
    android:weightSum="1">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24dp"
        android:text="@string/news"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_news_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24dp"
        android:text="@string/lohet_sharf"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_lohetsharf_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/bt_date_id"
        android:text="@string/date"
        android:layout_weight="0.03" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardview"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:background="@color/cardview_dark_background"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">
      <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

          <Button
              android:text="@string/montada"
              android:id="@+id/bt_montada_id"
              android:textSize="18dp"
              android:background="@drawable/roundedbutton"
              android:layout_width="0dp"
              android:layout_weight="1.01"
              android:layout_margin="4dp"
              android:layout_height="96dp" />

          <Button
              android:text="@string/faaliat"
              android:id="@+id/bt_faaliat_id"
              android:background="@drawable/roundedbutton"
              android:layout_width="0dp"
              android:textSize="18dp"
              android:layout_weight="1.01"
              android:layout_margin="4dp"
              android:layout_height="96dp" />

          <Button
              android:text="@string/medya"
              android:textAlignment="center"
              android:textSize="18dp"
              android:id="@+id/bt_medya_id"
              android:background="@drawable/roundedbutton"
              android:layout_width="0dp"
              android:layout_weight="1.01"
              android:layout_margin="4dp"
              android:layout_height="96dp" />


      </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_aboutus_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/aboutus"/>
        <Button
            android:id="@+id/bt_message_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/morasla"/>

    </LinearLayout>
</LinearLayout>
